fix search results with scrollbar

--- a/dataviva/static/css/styles.nav.css
+++ b/dataviva/static/css/styles.nav.css
@@ -436,4 +436,5 @@ a#search {
 .searchResult .search_text * {
   display: block !important;
   margin-left: 6px !important;
+  width: 350px !important;
 }
